telexpress/nginx/nginx-with-labels-annotations-v1.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-v1
  namespace: istio-test
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: istio-test
  labels:
    app: nginx
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: podinfo
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: "labels.html"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations.html"
            fieldRef:
              fieldPath: metadata.annotations
