telexpress/nginx/istio-ingress-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-http
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: frontend.default.svc.cluster.local
